# ai-museum-guide

./: .env.example  .gitignore  Basiclogic.txt  KTYyapılacaklar.txt  README.md  generate_qr.py  pyproject.toml  runcommand.txt  runcommands.txt  test_llm.py  test_prompts.py  test_quality_v2.py  test_quality_v3.py
app/: main.py
app/db/: chroma.py
app/models/: character_models.py  chat_models.py  memory_models.py  qr_models.py  voice_models.py
app/routers/: admin.py  character.py  chat.py  qr.py  status.py  voice.py
app/services/: character_service.py  chat_service.py  conversation_history.py  exhibit_info_service.py  key_rotation.py  llm.py  memory_service.py  prompts.py  qr_service.py  rag.py  recommendations.py  retriever.py  stats_service.py  token_tracker.py  voice_service.py
app/utils/: ids.py
data/: exhibit_catalog.txt  exhibit_metadata.json  exhibits.json  museum_info.txt  stats.json  token_usage.json
data/curated/: amerikan_gotigi.txt  avignonlu_kizlar.txt  bellegin_azmi.txt  gece_devriyesi.txt  mona_lisa.txt  su_zambaklari.txt
data/mappings/: qr_to_exhibit.json
data/newDATA/: 11. Laboratuvar Aküsü (Eski Dönem).docx  12. Temsili Sınıf Canlandırması ve Sıralar.docx  2. 1928 Yılı Okuma-Yazma Kursu İstatistikleri ve Belgeleri.docx  20. Bando Kıyafeti (1986-1992).docx  4. 1933 Tarihli Okul Flaması.docx  (+10 more)
dnm face 0 ai/: app.js  azure-test.html  index.html  server.py  style.css
ingestion/: convert_docx.py  ingest.py  ingest_ted.py
web/: admin.html  avatar-guide-v2.html  avatar-guide.html  avatar.glb  chat.html  gallery.html  index.html  qr-scan.html
(+90 files in other folders)
