[project]
name = "ai-museum-guide"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "chromadb",
  "langchain",
  "langchain-community",
  "python-dotenv",
  "python-multipart",
  "pypdf",
  "tiktoken",
  "sentence-transformers>=5.1.2",
  "langchain-google-genai",
  "google-api-core>=2.28.1",
]

[tool.uv]
